# kate_codex_plugin

./: .gitignore  CMakeLists.txt  README.md  install.sh  plugin.cpp  plugin.h  plugin.json  resources.qrc  system_prompt.txt
